--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </header>
 
         <section class="score-panel">
+          <span class="clock">00:00</span>
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
@@ -30,7 +31,6 @@
         </section>
 
         <ul class="deck">
-          
         </ul>
     </div>
 
