--- a/index.html
+++ b/index.html
@@ -17,21 +17,36 @@
 
         <section class="score-panel">
           <span class="clock">00:00</span>
+
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
+            <li class="starlist"><i class="fa fa-star"></i></li>
         	</ul>
 
         	<span class="moves">3</span> Moves
-
-            <div class="restart">
-        		<i class="fa fa-repeat"></i>
-        	</div>
         </section>
 
         <ul class="deck">
         </ul>
+        <div id = "popup" class = "overlay">
+          <div class = "message1">
+            <h1>Congratulations!</h1>
+            <h2>You are a winner!</h2>
+         </div>
+          <div class = "message2">
+            <p>You time: <span id = totalTime</span></p>
+            <p>Rating: <span id = rating</span></p>
+        </div>
+        <button onclick="playAgain()">
+          Restart and play again</a>
+        </button>
     </div>
 
     <script src="js/app.js"></script>
