--- a/index.html
+++ b/index.html
@@ -18,37 +18,36 @@
         <section class="score-panel">
           <span class="clock">00:00</span>
 
-        	<ul class="stars">
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
-            <li class="starlist"><i class="fa fa-star"></i></li>
+          <ul class="stars">
+            <li class><i class="fa fa-star"></i></li>
+            <li class><i class="fa fa-star"></i></li>
+            <li class><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0</span> Moves
+
+          <div class="restart">
+          <i class="fa fa-repeat"></i>
+
+        </div>
         </section>
 
         <ul class="deck">
         </ul>
-        <div id = "popup" class = "overlay">
-          <div class = "message1">
-            <h1>Congratulations!</h1>
-            <h2>You are a winner!</h2>
-         </div>
-          <div class = "message2">
-            <p>You time: <span id = totalTime</span></p>
-            <p>Rating: <span id = rating</span></p>
-        </div>
-        <button onclick="playAgain()">
-          Restart and play again</a>
-        </button>
-    </div>
 
+        <div class="modal hide">
+          <div class="modal-heading">
+            <h1 class="modal-title">Your stats</h1>
+          </div>
+          <div class="stats">
+            <span class="stats-time">Time</span>
+            <span class="stats-stars">Stars</span>
+            <span class="stats-moves">Moves</span>
+          </div>
+          <div class="button">
+            <button class="replay">Replay</button>
+          </div>
+        </div>
     <script src="js/app.js"></script>
 </body>
 </html>
