--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             <h1 class="modal-title">Your stats</h1>
           </div>
           <div class="stats">
-            <span class="stats-time">Time</span>
-            <span class="stats-stars">Stars</span>
-            <span class="stats-moves">Moves</span>
+            <p>In <span id="totalTime"></span></p>
+            <p>you did <span id="finalMoves"></span> moves</p>
+            <p>You Rating: <span id="starRating"></span></p>
           </div>
           <div class="button">
             <button class="replay">Replay</button>
