--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="modal hide">
           <div class="modal-heading">
-            <h1 class="modal-title">Your stats</h1>
+            <h1 id="modal-title">Your Statistics</h1>
           </div>
           <div class="stats">
             <p>In <span id="totalTime"></span></p>
